<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center|center_horizontal"
        android:text="@string/textView"
        android:textColor="#A61B1B"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/chkJocul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:onClick="onCheckboxClicked"
        android:padding="10dp"
        android:text="@string/chkJocul" />
    <CheckBox
        android:id="@+id/chkbucataria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:padding="10dp"
        android:text="@string/chkbucataria"
        android:onClick="onCheckboxClicked"
        />
    <CheckBox
        android:id="@+id/chkmuzica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:padding="10dp"
        android:text="@string/chkmuzica"
        android:onClick="onCheckboxClicked"
         />
    <CheckBox
        android:id="@+id/chkdesenul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:padding="10dp"
        android:text="@string/chkdesen"
        android:onClick="onCheckboxClicked"
        />

    <Button
        android:id="@+id/getBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/optiuni_selectate" />
</LinearLayout>